--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "files.associations": {
-        "error.h": "c"
+        "error.h": "c",
+        "stdio.h": "c",
+        "node.h": "c",
+        "queue.h": "c",
+        "stack.h": "c",
+        "multipriorityqueue.h": "c"
     }
 }
